--- a/footer.html
+++ b/footer.html
@@ -37,7 +37,7 @@
           <div class="show-all-top clearFix">
             <div class="show-all-top-inner clearFix">
               <h2 class="show-all-title">"<span class="keyword">베개</span>" 원문보기</h2>
-              <div class="sort-option">
+              <!-- <div class="sort-option">
                 <p class="option-selected">최신순</p>
                 <ul class="option-list">
                   <li class="option-item">최신순</li>
@@ -45,6 +45,15 @@
                   <li class="option-item">댓글수순</li>
                   <li class="option-item">추천수순</li>
                 </ul>
+              </div> -->
+              <div class="sort-select-box">
+                <select name="sortModalList" id="sortModalList" class="sort-select">
+                  <option value="latest" selected>최신순</option>
+                  <option value="views" selected>조회수순</option>
+                  <option value="comments" selected>댓글수순</option>
+                  <option value="likes" selected>추천수순</option>
+                </select>
+                <span class="icon-arrow"></span>
               </div>
               <div class="search-input">
                 <input type="text" id="searchOrigin" placeholder="검색어를 입력하세요">
