--- a/trend.html
+++ b/trend.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="http://www.buzzon.co.kr">
   <meta property="og:description" content="Buzz On">
   <meta property="og:image" content="./src/img/common/img-share.png">
-  <link rel="short cut icon" type="image/x-icon" href="./src/img/icon/favicon.png">
+  <link rel="short cut icon" type="image/x-icon" href="./src/img/icon/favicon.svg">
   <title>buzz ON</title>
 
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -74,6 +74,13 @@
               </div>
               <div class="article-content">
                 <div class="article-content-top">
+                  <div class="period-select">
+                    <ul class="period-list">
+                      <li class="period-item">DAILY</li>
+                      <li class="period-item">WEEKLY</li>
+                      <li class="period-item now-on">MONTHLY</li>
+                    </ul>
+                  </div>
                   <div class="color-info">
                     <ul class="color-list">
                       <li class="color-item color-item-sns">
@@ -96,13 +103,6 @@
                         <p class="item-color"></p>
                         <span class="item-name">News</span>
                       </li>
-                    </ul>
-                  </div>
-                  <div class="period-select">
-                    <ul class="period-list">
-                      <li class="period-item">DAILY</li>
-                      <li class="period-item">WEEKLY</li>
-                      <li class="period-item now-on">MONTHLY</li>
                     </ul>
                   </div>
                 </div>
@@ -138,6 +138,13 @@
               </div>
               <div class="article-content">
                 <div class="article-content-top">
+                  <div class="period-select">
+                    <ul class="period-list">
+                      <li class="period-item">DAILY</li>
+                      <li class="period-item">WEEKLY</li>
+                      <li class="period-item now-on">MONTHLY</li>
+                    </ul>
+                  </div>
                   <div class="color-info">
                     <ul class="color-list">
                       <li class="color-item color-item-views">
@@ -156,13 +163,6 @@
                         <p class="item-color"></p>
                         <span class="item-name">Shares</span>
                       </li>
-                    </ul>
-                  </div>
-                  <div class="period-select">
-                    <ul class="period-list">
-                      <li class="period-item">DAILY</li>
-                      <li class="period-item">WEEKLY</li>
-                      <li class="period-item now-on">MONTHLY</li>
                     </ul>
                   </div>
                 </div>
@@ -196,6 +196,13 @@
               </div>
               <div class="article-content">
                 <div class="article-content-top">
+                  <div class="period-select">
+                    <ul class="period-list">
+                      <li class="period-item">DAILY</li>
+                      <li class="period-item">WEEKLY</li>
+                      <li class="period-item now-on">MONTHLY</li>
+                    </ul>
+                  </div>
                   <div class="color-info">
                     <ul class="color-list">
                       <li class="color-item color-item-posit">
@@ -210,13 +217,6 @@
                         <p class="item-color"></p>
                         <span class="item-name">부정</span>
                       </li>
-                    </ul>
-                  </div>
-                  <div class="period-select">
-                    <ul class="period-list">
-                      <li class="period-item">DAILY</li>
-                      <li class="period-item">WEEKLY</li>
-                      <li class="period-item now-on">MONTHLY</li>
                     </ul>
                   </div>
                 </div>
