--- a/now.html
+++ b/now.html
@@ -703,6 +703,24 @@
                 <h3 class="add-icon">SENTIMENT</h3>
               </div>
               <div class="article-content">
+                <div class="article-content-top">
+                  <div class="color-info">
+                    <ul class="color-list">
+                      <li class="color-item color-item-posit">
+                        <p class="item-color"></p>
+                        <span class="item-name">긍정</span>
+                      </li>
+                      <li class="color-item color-item-neutral">
+                        <p class="item-color"></p>
+                        <span class="item-name">중립</span>
+                      </li>
+                      <li class="color-item color-item-negat">
+                        <p class="item-color"></p>
+                        <span class="item-name">부정</span>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
                 <div class="article-chart-wrap -wrap">
 
                 </div>
