--- a/header.html
+++ b/header.html
@@ -244,11 +244,16 @@
           </div>
         </div>
 
-        <div class="detail-btn-area">
-          <p class="preset-btn">
-            <a href="#" class="add-icon">검색설정 가져오기</a>
-          </p>
-          <button type="submit" ID="detailSubmit" class="submit-btn">검색 결과 보기</button>
+        <div class="detail-btn-area clearFix">
+          <div class="detail-preset-wrap">
+            <p class="preset-btn">
+              <a href="#" class="add-icon">검색설정 가져오기</a>
+            </p>
+          </div>
+          <div class="detail-btn-wrap">
+            <button id="detailCncl" class="cancel-btn">취소</button>
+            <button type="submit" id="detailSubmit" class="submit-btn">검색 결과 보기</button>
+          </div>
         </div>
       </form>
     </div>
