--- a/footer.html
+++ b/footer.html
@@ -61,7 +61,7 @@
                 <button class="search-btn"></button>
               </div>
               <div id="downAllList" class="file-down-btn">
-                <button class="file-down"></button>
+                <button class="file-down add-icon">내려받기</button>
               </div>
             </div>
             <div id="clsAllList" class="modal-cls-btn">
